--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,13 @@
 <html>
   <body>
+    <div id="app">
+      <input v-model="newMsg" v-on:keyup.enter="addMsg">
+      <ul>
+        <li v-for="msg in messages">
+          <span>{{{msg}}}</span>
+        </li>
+      </ul>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
