--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,23 @@
 <html>
+  <head>
+    <style>
+     .hide {
+       display: none;
+     }
+    </style>
+  </head>
   <body>
-    <div id="app">
-      <input v-model="newMsg" v-on:keyup.enter="addMsg">
+    <div id="channel">
+      <input type="text" v-model="channel">
+      <button v-on:click="goToChannel(true)">Create</button>
+      <button v-on:click="goToChannel()">Join</button>
+    </div>
+
+    <div id="msg">
+      <h3>{{channelInfo}}</h3>
+      <input v-model="newMsg"
+             v-bind:class="{'hide': shouldHide}"
+             v-on:keyup.enter="addMsg">
       <ul>
         <template v-for="msg in messages" track-by="$index">
           <li>
